슬라이더 마크업

--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <!-- <script defer src="./index.js"></script> -->
 </head>
 <body>
     <div id="slider-wrap">
-        <ul id="slider">
+        <ul id="slider" >
             <li class="slide" style="background: yellowgreen;"></li>
             <li class="slide" style="background: honeydew;"></li>
             <li class="slide" style="background: salmon;"></li>
             <li class="slide" style="background: cornflowerblue;"></li>
         </ul>
-        <div class="slider-btns">
-            <button class="left-btn">왼쪽</button>
-            <button class="right-btn">오른쪽</button>
+        <div class="slider-btn-wrap">
+            <button class="prev">왼쪽</button>
+            <button class="next">오른쪽</button>
         </div>
     </div>
 </body>
