페이지네이션 동적으로 생성 코드 추가

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <button class="prev">왼쪽</button>
             <button class="next">오른쪽</button>
         </div>
+        <ul class="pagination-wrap">
+        </ul>
     </div>
 </body>
 </html>
