--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <script defer src="./index.js"></script>
+    <script defer src="./test.js"></script>
 </head>
 <body>
     <div id="slider-wrap">
@@ -17,8 +17,8 @@
             <li class="slide" style="background: cornflowerblue;"></li>
         </ul>
         <div class="slider-btn-wrap">
-            <button class="prev">왼쪽</button>
-            <button class="next">오른쪽</button>
+            <button class="prev">left</button>
+            <button class="next">right</button>
         </div>
         <ul class="pagination-wrap">
         </ul>
